--- a/index.html
+++ b/index.html
@@ -534,7 +534,8 @@
         order: -1;
       }
       .hero-floating-badge {
-        display: none;
+  display: block;
+      }
       }
       .grid {
         grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -946,5 +947,6 @@
 </script>
 </body>
 </html>
+
 
 
