--- a/index.html
+++ b/index.html
@@ -534,9 +534,14 @@
         order: -1;
       }
       .hero-floating-badge {
-  display: block;
-      }
-      }
+    position: relative;
+    top: auto;
+    right: auto;
+    margin-top: 12px;
+    transform: none;
+    display: block;
+    max-width: 100%;
+  }
       .grid {
         grid-template-columns: repeat(2, minmax(0, 1fr));
       }
@@ -551,8 +556,8 @@
         gap: 10px;
       }
       nav {
-    display: flex;          /* show it again */
-    flex-wrap: wrap;        /* allow items to go to 2nd line */
+    display: flex;
+    flex-wrap: wrap;
     gap: 8px;
     font-size: 0.8rem;
     justify-content: flex-end;
@@ -830,7 +835,6 @@
   </div>
 
  <script type="module">
-  // 1) Import Firebase SDK from CDN
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
   import {
     getAuth,
@@ -838,22 +842,22 @@
     signInWithEmailAndPassword,
     signOut,
     onAuthStateChanged,
-    sendPasswordResetEmail,   // 👈 added for "forgot password"
+    sendPasswordResetEmail,
   } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
-  // 2) Your Firebase config (COPY FROM FIREBASE CONSOLE)
   const firebaseConfig = {
-    apiKey: "YOUR_API_KEY",
-    authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-    projectId: "YOUR_PROJECT_ID",
-    storageBucket: "YOUR_PROJECT_ID.appspot.com",
-    messagingSenderId: "YOUR_SENDER_ID",
-    appId: "YOUR_APP_ID",
+    apiKey: "AIzaSyDr3YpouSddKSR-9PqKPHDSP1qfwNv-VBM",
+    authDomain: "irshad-website.firebaseapp.com",
+    projectId: "irshad-website",
+    storageBucket: "irshad-website.firebasestorage.app",
+    messagingSenderId: "513828028182",
+    appId: "1:513828028182:web:ceca5d1ac390d5ec731a37"
   };
 
-  // 3) Init
   const app = initializeApp(firebaseConfig);
   const auth = getAuth(app);
+
+  // ... (rest of login/signup/reset code from my previous message)
 
   // 4) UI helpers
   window.showAuthMode = function (mode) {
@@ -947,6 +951,4 @@
 </script>
 </body>
 </html>
-
-
 
